Environment set-up

--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "personal-budget",
+  "name": "uncc-quiz10",
   "version": "1.0.0",
-  "description": "The path to NGInx main folder: /usr/share/nginx/html",
-  "main": "server.js",
+  "description": "Code to be used to start the Quiz 10 exercise.",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fabionolasco/personal-budget.git"
+    "url": "git+https://github.com/fabionolasco/uncc-quiz10.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fabionolasco/personal-budget/issues"
+    "url": "https://github.com/fabionolasco/uncc-quiz10/issues"
   },
-  "homepage": "https://github.com/fabionolasco/personal-budget#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
+  "homepage": "https://github.com/fabionolasco/uncc-quiz10#readme",
+  "devDependencies": {
+    "eslint": "^7.13.0",
+    "prettier": "2.1.2"
   }
 }
